--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -9,8 +9,9 @@
     <div class="md-grid md-typeset">
       <div class="mdx-hero">
         <div class="mdx-hero__content">
-          <h1>Technical documentation from Repo Racers.</h1>
-          <p>{{ config.site_description }}</p>
+          <h1>The GitHub and Azure DevOps Playbook</h1>
+          <div>Supercharging GitHub and Azure DevOps.</div>
+          <div>From the crew at Repo Racers.</div>
           <a href="{{ page.next_page.url | url }}" title="{{ page.next_page.title | e }}" class="md-button md-button--primary">
             Lets Go!
           </a>
