add hero homepage

--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -4,18 +4,21 @@
 {% extends "main.html" %}
 {% block tabs %}
   {{ super() }}
-  <style>.md-header{position:initial}.md-main__inner{margin:0}.md-content{display:none}@media screen and (min-width:60em){.md-sidebar--secondary{display:none}}@media screen and (min-width:76.25em){.md-sidebar--primary{display:none}}</style>
-  <section class="mdx-container">
-    <div class="md-grid md-typeset">
-      <div class="mdx-hero">
-        <div class="mdx-hero__content">
-          <h1>The GitHub and Azure DevOps Playbook</h1>
-          <div>Supercharging GitHub and Azure DevOps.</div>
-          <div>From the crew at Repo Racers.</div>
-          <a href="{{ page.next_page.url | url }}" title="{{ page.next_page.title | e }}" class="md-button md-button--primary">
-            Lets Go!
-          </a>
-        </div>
+  <section class="hero is-fullheight-with-navbar">
+    <div class="hero-body">
+      <div class="container has-text-centered">
+        <h1 class="title">
+          The GitHub and Azure DevOps Playbook
+        </h1>
+        <h2 class="subtitle">
+          Supercharging GitHub and Azure DevOps.
+        </h2>
+        <h2 class="subtitle">
+          From the crew at Repo Racers.
+        </h2>
+        <a href="{{ page.next_page.url | url }}" title="{{ page.next_page.title | e }}" class="button is-primary">
+          Lets Go!
+        </a>
       </div>
     </div>
   </section>
