--- a/material/overrides/main.html
+++ b/material/overrides/main.html
@@ -3,9 +3,9 @@
 -#}
 {% extends "base.html" %}
 {% block extrahead %}
-  <link rel="stylesheet" href="{{ 'assets/stylesheets/custom.00c04c01.min.css' | url }}">
+  <link rel="stylesheet" href="{{ 'https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css' | url }}">
+  <link rel="stylesheet" href="{{ '/assets/stylesheets/repo_racers.css' | url }}">
 {% endblock %}
 {% block scripts %}
   {{ super() }}
-  <script src="{{ 'assets/javascripts/custom.129bd6ad.min.js' | url }}"></script>
 {% endblock %}
