fix home template

--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -22,6 +22,7 @@
       </div>
     </div>
   </section>
-{% endblock %}
-{% block content %}{% endblock %}
-{% block footer %}{% endblock %}
+  {% endblock %}
+  {% block content %}
+  content
+  {% endblock %}
