fix tailwind css

--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -1,14 +1,9 @@
-{#-
-  This file was automatically generated - do not edit
--#}
 {% extends "main.html" %}
 {% block tabs %}
   {{ super() }}
+  <section>
+    <div class="h-screen bg-cover bg-no-repeat" style="margin-top: 10px; background-image: url('assets/images/jaron_lanier.webp');"></div>
+  </section>
   {% endblock %}
   {% block content %}
-  <section>
-    <div class="w-screen h-screen">
-      <img src="assets/images/jaron_lanier.webp" class="w-full h-full object-cover" />
-    </div>
-  </section>
   {% endblock %}
