--- a/material/overrides/main.html
+++ b/material/overrides/main.html
@@ -3,6 +3,7 @@
 -#}
 {% extends "base.html" %}
 {% block extrahead %}
+  <link rel="stylesheet" href="{{ '/assets/css/tailwind-output.css' | url }}">
 {% endblock %}
 {% block scripts %}
   {{ super() }}
