fix tailwind css

--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -1,8 +1,8 @@
-{% extends "main.html" %}
+{% extends "base.html" %}
 {% block tabs %}
   {{ super() }}
   <section>
-    <div class="h-screen bg-cover bg-no-repeat" style="margin-top: 10px; background-image: url('assets/images/jaron_lanier.webp');"></div>
+    <div class="h-screen bg-cover bg-no-repeat" style="background-image: url('assets/images/jaron_lanier.webp');"></div>
   </section>
   {% endblock %}
   {% block content %}
