--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block tabs %}
   {{ super() }}
-  <div id="scene" class="w-screen h-screen flex justify-center items-center relative z-[-1]">
+  <div id="scene" class="w-screen h-screen flex justify-center items-center relative top-[30px] z-[-1]">
     <div data-depth="1.00" class="flex justify-center items-center"><img src="assets/images/home/home_bg.png" class="w-screen h-screen scale-125"></div>
     <div data-depth="0.80" class="flex justify-center items-center"><img src="assets/images/home/home_trio.png" class="w-screen h-screen scale-125"></div>
   </div>
