--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -4,10 +4,18 @@
 {% endblock %}
 {% block tabs %}
   {{ super() }}
-  <div id="scene" class="w-screen h-screen flex justify-center items-center relative top-[30px] z-[-1]">
-    <div data-depth="1.00" class="flex justify-center items-center"><img src="assets/images/home/home_bg.png" class="w-screen h-screen scale-125"></div>
-    <div data-depth="0.80" class="flex justify-center items-center"><img src="assets/images/home/home_trio.png" class="w-screen h-screen scale-125"></div>
-  </div>
+  <section>
+    <div class="h-screen flex flex-col justify-center items-center relative">
+      <div id="scene" class="w-screen h-screen flex justify-center items-center absolute inset-0 z-[-1]">
+        <div data-depth="1.00" class="flex justify-center items-center"><img src="assets/images/home/home_bg.png" class="w-screen h-screen scale-125"></div>
+        <div data-depth="0.80" class="flex justify-center items-center"><img src="assets/images/home/home_trio.png" class="w-screen h-screen scale-125"></div>
+      </div>
+      <div id="hero" class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-12 absolute inset-0 flex flex-col items-center justify-center">
+          <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl dark:text-white">Supercharging GitHub and Azure DevOps.</h1>
+          <a href="{{ page.next_page.url | url }}" class="mt-4 py-2 px-4 bg-blue-500 text-white text-lg font-bold rounded-lg shadow-md hover:bg-blue-700">Let's Go!</a>
+      </div>
+    </div>
+  </section>
   {% endblock %}
   {% block content %}
   {% endblock %}
