--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -428,44 +428,58 @@
     <section>
         <div class="pb-36">
             <div class="mx-auto px-6 max-w-6xl text-gray-500">
-                <div class="text-center">
-                    <h2 class="text-3xl text-gray-950 dark:text-white font-semibold">Built by the Community <br> for the Community</h2>
-                    <p class="mt-6 text-gray-700 dark:text-gray-300">Harum quae dolore orrupti aut temporibus ariatur.</p>
-                </div>
                 <div class="mt-12 max-w-lg mx-auto flex justify-center flex-wrap gap-3">
-                    <a href="https://github.com/meschacirung" target="_blank" title="Méschac Irung" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
-                        <img alt="John Doe" src="https://randomuser.me/api/portraits/men/1.jpg" class="rounded-full" loading="lazy" width="120" height="120">
-                    </a>
-                    <a href="https://github.com/meschacirung" target="_blank" title="Méschac Irung" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
-                        <img alt="John Doe" src="https://randomuser.me/api/portraits/men/2.jpg" class="rounded-full" loading="lazy" width="120" height="120">
-                    </a>
-                    <a href="https://github.com/meschacirung" target="_blank" title="Méschac Irung" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
-                        <img alt="John Doe" src="https://randomuser.me/api/portraits/men/3.jpg" class="rounded-full" loading="lazy" width="120" height="120">
-                    </a>
-                    <a href="https://github.com/meschacirung" target="_blank" title="Méschac Irung" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
-                        <img alt="John Doe" src="https://randomuser.me/api/portraits/men/4.jpg" class="rounded-full" loading="lazy" width="120" height="120">
-                    </a>
-                    <a href="https://github.com/meschacirung" target="_blank" title="Méschac Irung" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
-                        <img alt="John Doe" src="https://randomuser.me/api/portraits/men/5.jpg" class="rounded-full" loading="lazy" width="120" height="120">
-                    </a>
-                    <a href="https://github.com/meschacirung" target="_blank" title="Méschac Irung" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
-                        <img alt="John Doe" src="https://randomuser.me/api/portraits/men/6.jpg" class="rounded-full" loading="lazy" width="120" height="120">
-                    </a>
-                    <a href="https://github.com/meschacirung" target="_blank" title="Méschac Irung" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
-                        <img alt="John Doe" src="https://randomuser.me/api/portraits/men/7.jpg" class="rounded-full" loading="lazy" width="120" height="120">
-                    </a>
-                    <a href="https://github.com/meschacirung" target="_blank" title="Méschac Irung" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
-                        <img alt="John Doe" src="https://randomuser.me/api/portraits/men/1.jpg" class="rounded-full" loading="lazy" width="120" height="120">
-                    </a>
-                    <a href="https://github.com/meschacirung" target="_blank" title="Méschac Irung" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
-                        <img alt="John Doe" src="https://randomuser.me/api/portraits/men/8.jpg" class="rounded-full" loading="lazy" width="120" height="120">
-                    </a>
-                    <a href="https://github.com/meschacirung" target="_blank" title="Méschac Irung" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
-                        <img alt="John Doe" src="https://randomuser.me/api/portraits/men/9.jpg" class="rounded-full" loading="lazy" width="120" height="120">
-                    </a>
-                    <a href="https://github.com/meschacirung" target="_blank" title="Méschac Irung" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
-                        <img alt="John Doe" src="https://randomuser.me/api/portraits/men/10.jpg" class="rounded-full" loading="lazy" width="120" height="120">
-                    </a>
+                    <div class="text-center">
+                        <h2 class="text-3xl text-gray-950 dark:text-white font-semibold">Built by engineers, for engineers.</h2>
+                        <p class="mt-6 text-gray-700 dark:text-gray-300">Empowering the developer community with awesome open source software.</p>
+                    </div>
+                    <div class="mt-12 max-w-lg mx-auto flex justify-center flex-wrap gap-3">
+                        <a href="https://github.com/DevOpsKev" target="_blank" title="DevOpsKev" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="DevOpsKev" src="https://avatars.githubusercontent.com/u/36336550?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
+                        <a href="https://github.com/phoughton" target="_blank" title="phoughton" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="phoughton" src="https://avatars.githubusercontent.com/u/941812?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
+                        <a href="https://github.com/meschacirung" target="_blank" title="meschacirung" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="meschacirung" src="https://avatars.githubusercontent.com/u/47919550?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
+                        <a href="https://github.com/squidfunk" target="_blank" title="squidfunk" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="squidfunk" src="https://avatars.githubusercontent.com/u/932156?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
+                        <a href="https://github.com/asottile" target="_blank" title="asottile" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="asottile" src="https://avatars.githubusercontent.com/u/1810591?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
+                        <a href="https://github.com/chriskuehl" target="_blank" title="chriskuehl" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="chriskuehl" src="https://avatars.githubusercontent.com/u/665269?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
+                        <a href="https://github.com/d0ugal" target="_blank" title="d0ugal" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="d0ugal" src="https://avatars.githubusercontent.com/u/48211?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
+                        <a href="https://github.com/oprypin" target="_blank" title="oprypin" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="oprypin" src="https://avatars.githubusercontent.com/u/371383?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
+                        <a href="https://github.com/adamwathan" target="_blank" title="adamwathan" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="adamwathan" src="https://avatars.githubusercontent.com/u/4323180?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
+                        <a href="https://github.com/RobinMalfait" target="_blank" title="RobinMalfait" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="RobinMalfait" src="https://avatars.githubusercontent.com/u/1834413?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
+                        <a href="https://github.com/gitster" target="_blank" title="gitster" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="gitster" src="https://avatars.githubusercontent.com/u/54884?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
+                        <a href="https://github.com/peff" target="_blank" title="peff" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="peff" src="https://avatars.githubusercontent.com/u/45925?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
+                        <a href="https://github.com/skywinder" target="_blank" title="skywinder" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="skywinder" src="https://avatars.githubusercontent.com/u/3356474?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
+                        <a href="https://github.com/olleolleolle" target="_blank" title="olleolleolle" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="olleolleolle" src="https://avatars.githubusercontent.com/u/211?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
+                        <a href="https://github.com/ferrarimarco" target="_blank" title="ferrarimarco" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="ferrarimarco" src="https://avatars.githubusercontent.com/u/621939?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
