--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -425,6 +425,9 @@
             </div>
         </div>
     </section>
+  <!------------------------------------------------------------------------------------------------------------------------------------------------------------>
+  <!-- Begin built by section ---------------------------------------------------------------------------------------------------------------------------------->
+  <!------------------------------------------------------------------------------------------------------------------------------------------------------------>
     <section>
         <div class="pb-36">
             <div class="mx-auto px-6 max-w-6xl text-gray-500">
@@ -484,6 +487,9 @@
             </div>
         </div>
     </section>
+  <!------------------------------------------------------------------------------------------------------------------------------------------------------------>
+  <!-- End built by section ---------------------------------------------------------------------------------------------------------------------------------->
+  <!------------------------------------------------------------------------------------------------------------------------------------------------------------>
   {% endblock %}
   {% block scripts %}
   {{ super() }}
