--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -467,9 +467,6 @@
                         <a href="https://github.com/RobinMalfait" target="_blank" title="RobinMalfait" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
                             <img alt="RobinMalfait" src="https://avatars.githubusercontent.com/u/1834413?v=4" class="rounded-full" loading="lazy" width="120" height="120">
                         </a>
-                        <a href="https://github.com/gitster" target="_blank" title="gitster" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
-                            <img alt="gitster" src="https://avatars.githubusercontent.com/u/54884?v=4" class="rounded-full" loading="lazy" width="120" height="120">
-                        </a>
                         <a href="https://github.com/peff" target="_blank" title="peff" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
                             <img alt="peff" src="https://avatars.githubusercontent.com/u/45925?v=4" class="rounded-full" loading="lazy" width="120" height="120">
                         </a>
@@ -479,8 +476,11 @@
                         <a href="https://github.com/olleolleolle" target="_blank" title="olleolleolle" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
                             <img alt="olleolleolle" src="https://avatars.githubusercontent.com/u/211?v=4" class="rounded-full" loading="lazy" width="120" height="120">
                         </a>
-                        <a href="https://github.com/ferrarimarco" target="_blank" title="ferrarimarco" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
-                            <img alt="ferrarimarco" src="https://avatars.githubusercontent.com/u/621939?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        <a href="https://github.com/DavidAnson" target="_blank" title="DavidAnson" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="DavidAnson" src="https://avatars.githubusercontent.com/u/1828270?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
+                        <a href="https://github.com/tarekziade" target="_blank" title="tarekziade" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="tarekziade" src="https://avatars.githubusercontent.com/u/250019?v=4" class="rounded-full" loading="lazy" width="120" height="120">
                         </a>
                     </div>
                 </div>
@@ -496,30 +496,5 @@
     <script>
         var scene = document.getElementById('scene');
         var parallax = new Parallax(scene);
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script>
-
-
-
-            var swiper = new Swiper('.proofSlides', {
-                effect: "cube",
-                cubeEffect : {
-                    slideShadows: false,
-                    shadow: false,
-                    shadowOffset: 20,
-                    shadowScale: 0.94,
-                },
-                loop: true,
-                autoplay : {
-                    delay: 3000,
-                    duration : 500
-                },
-                grabCursor: true,
-                centeredSlides: true,
-                pagination: {
-                    el: '.swiper-pagination',
-                }
-            });
     </script>
 {% endblock %}
