--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -34,7 +34,7 @@
                 </span>
             </a>
             <h1 class="mt-8 text-wrap text-4xl md:text-5xl font-semibold text-gray-950 dark:text-white xl:text-5xl xl:[line-height:1.125]">Supercharging GitHub and Azure DevOps.</h1>
-            <p class="text-wrap mx-auto mt-8 max-w-2xl text-lg text-gray-700 dark:text-gray-300 hidden sm:block">From enterprise implementations to Copilot fine-tuning, we accelerate your projects with expert support and a commitment to quality.</p>
+            <p class="text-wrap mx-auto mt-8 max-w-2xl text-lg text-gray-700 dark:text-gray-300 hidden sm:block">100% open source. From enterprise implementations to Copilot fine-tuning, we accelerate your projects with expert support and a commitment to quality.</p>
             <p class="text-base text-wrap mx-auto mt-6 max-w-2xl text-gray-700 dark:text-gray-300 sm:block">Drive GitHub like you stole it!</p>
             <div class="mt-8 flex flex-col items-center justify-center gap-4">
                 <div class="p-1 rounded-[calc(var(--btn-border-radius)+4px)] bg-gray-950/5 border dark:border-white/10 dark:bg-white/5">
