--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -245,7 +245,7 @@
                             <div class="p-[--card-padding] rounded-[--card-border-radius] border bg-white border-[--ui-light-border-color] dark:bg-[--card-dark-bg] dark:border-[--ui-dark-border-color] group">
                                 <div class="flex gap-3">
                                     <span class="relative block rounded-[--avatar-border-radius] text-lg size-10">
-                                        <img class="h-full w-full rounded-[--avatar-border-radius] object-cover" alt="John Doe" src="https://randomuser.me/api/portraits/men/1.jpg" loading="lazy" width="120" height="120">
+                                        <img class="h-full w-full rounded-[--avatar-border-radius] object-cover" alt="johnson" src="https://randomuser.me/api/portraits/women/6.jpg" loading="lazy" width="120" height="120">
                                     </span>
                                     <div class="w-[calc(100%-3.25rem)]">
                                         <h3 class="font-medium text-gray-950 dark:text-white">Sarah Johnson</h3>
@@ -265,7 +265,7 @@
                             <div class="p-[--card-padding] rounded-[--card-border-radius] border bg-white border-[--ui-light-border-color] dark:bg-[--card-dark-bg] dark:border-[--ui-dark-border-color] group">
                                 <div class="flex gap-3">
                                     <span class="relative block rounded-[--avatar-border-radius] text-lg size-10">
-                                        <img class="h-full w-full rounded-[--avatar-border-radius] object-cover" alt="John Doe" src="https://randomuser.me/api/portraits/men/1.jpg" loading="lazy" width="120" height="120">
+                                        <img class="h-full w-full rounded-[--avatar-border-radius] object-cover" alt="gonzalez" src="https://randomuser.me/api/portraits/men/12.jpg" loading="lazy" width="120" height="120">
                                     </span>
                                     <div class="w-[calc(100%-3.25rem)]">
                                         <h3 class="font-medium text-gray-950 dark:text-white">Javier González</h3>
@@ -285,10 +285,10 @@
                             <div class="p-[--card-padding] rounded-[--card-border-radius] border bg-white border-[--ui-light-border-color] dark:bg-[--card-dark-bg] dark:border-[--ui-dark-border-color] group">
                                 <div class="flex gap-3">
                                     <span class="relative block rounded-[--avatar-border-radius] text-lg size-10">
-                                        <img class="h-full w-full rounded-[--avatar-border-radius] object-cover" alt="John Doe" src="https://randomuser.me/api/portraits/men/1.jpg" loading="lazy" width="120" height="120">
+                                        <img class="h-full w-full rounded-[--avatar-border-radius] object-cover" alt="liu" src="https://randomuser.me/api/portraits/women/78.jpg" loading="lazy" width="120" height="120">
                                     </span>
                                     <div class="w-[calc(100%-3.25rem)]">
-                                        <h3 class="font-medium text-gray-950 dark:text-white">Emily Patel</h3>
+                                        <h3 class="font-medium text-gray-950 dark:text-white">Emily Liu</h3>
                                         <span class="block text-sm tracking-wide text-gray-600 dark:text-gray-400">Fullstack Developer</span>
                                         <blockquote class="mt-3">
                                             <p class="text-gray-700 dark:text-gray-300">
@@ -304,7 +304,7 @@
                         <div class="p-[--card-padding] rounded-[--card-border-radius] border bg-white border-[--ui-light-border-color] dark:bg-[--card-dark-bg] dark:border-[--ui-dark-border-color] group">
                             <div class="flex gap-3">
                                 <span class="relative block rounded-[--avatar-border-radius] text-lg size-10">
-                                    <img class="h-full w-full rounded-[--avatar-border-radius] object-cover" alt="John Doe" src="https://randomuser.me/api/portraits/men/1.jpg" loading="lazy" width="120" height="120">
+                                    <img class="h-full w-full rounded-[--avatar-border-radius] object-cover" alt="martins" src="https://randomuser.me/api/portraits/men/15.jpg" loading="lazy" width="120" height="120">
                                 </span>
                                 <div class="w-[calc(100%-3.25rem)]">
                                     <h3 class="font-medium text-gray-950 dark:text-white">Lucas Martins</h3>
@@ -324,10 +324,10 @@
                             <div class="p-[--card-padding] rounded-[--card-border-radius] border bg-white border-[--ui-light-border-color] dark:bg-[--card-dark-bg] dark:border-[--ui-dark-border-color] group">
                                 <div class="flex gap-3">
                                     <span class="relative block rounded-[--avatar-border-radius] text-lg size-10">
-                                        <img class="h-full w-full rounded-[--avatar-border-radius] object-cover" alt="John Doe" src="https://randomuser.me/api/portraits/men/1.jpg" loading="lazy" width="120" height="120">
+                                        <img class="h-full w-full rounded-[--avatar-border-radius] object-cover" alt="young" src="https://randomuser.me/api/portraits/men/30.jpg" loading="lazy" width="120" height="120">
                                     </span>
                                     <div class="w-[calc(100%-3.25rem)]">
-                                        <h3 class="font-medium text-gray-950 dark:text-white">Marcus Lee</h3>
+                                        <h3 class="font-medium text-gray-950 dark:text-white">Marcus Young</h3>
                                         <span class="block text-sm tracking-wide text-gray-600 dark:text-gray-400">Senior Software Engineer</span>
                                         <blockquote class="mt-3">
                                             <p class="text-gray-700 dark:text-gray-300">
@@ -343,7 +343,7 @@
                             <div class="p-[--card-padding] rounded-[--card-border-radius] border bg-white border-[--ui-light-border-color] dark:bg-[--card-dark-bg] dark:border-[--ui-dark-border-color] group">
                                 <div class="flex gap-3">
                                     <span class="relative block rounded-[--avatar-border-radius] text-lg size-10">
-                                        <img class="h-full w-full rounded-[--avatar-border-radius] object-cover" alt="John Doe" src="https://randomuser.me/api/portraits/men/1.jpg" loading="lazy" width="120" height="120">
+                                        <img class="h-full w-full rounded-[--avatar-border-radius] object-cover" alt="santos" src="https://randomuser.me/api/portraits/women/40.jpg" loading="lazy" width="120" height="120">
                                     </span>
                                     <div class="w-[calc(100%-3.25rem)]">
                                         <h3 class="font-medium text-gray-950 dark:text-white">Isabella Santos</h3>
@@ -362,7 +362,7 @@
                             <div class="p-[--card-padding] rounded-[--card-border-radius] border bg-white border-[--ui-light-border-color] dark:bg-[--card-dark-bg] dark:border-[--ui-dark-border-color] group">
                                 <div class="flex gap-3">
                                     <span class="relative block rounded-[--avatar-border-radius] text-lg size-10">
-                                        <img class="h-full w-full rounded-[--avatar-border-radius] object-cover" alt="John Doe" src="https://randomuser.me/api/portraits/men/1.jpg" loading="lazy" width="120" height="120">
+                                        <img class="h-full w-full rounded-[--avatar-border-radius] object-cover" alt="ramirez" src="https://randomuser.me/api/portraits/men/81.jpg" loading="lazy" width="120" height="120">
                                     </span>
                                     <div class="w-[calc(100%-3.25rem)]">
                                         <h3 class="font-medium text-gray-950 dark:text-white">Max Ramirez</h3>
@@ -381,10 +381,10 @@
                         <div class="p-[--card-padding] rounded-[--card-border-radius] border bg-white border-[--ui-light-border-color] dark:bg-[--card-dark-bg] dark:border-[--ui-dark-border-color] group">
                             <div class="flex gap-3">
                                 <span class="relative block rounded-[--avatar-border-radius] text-lg size-10">
-                                    <img class="h-full w-full rounded-[--avatar-border-radius] object-cover" alt="John Doe" src="https://randomuser.me/api/portraits/men/1.jpg" loading="lazy" width="120" height="120">
+                                    <img class="h-full w-full rounded-[--avatar-border-radius] object-cover" alt="james" src="https://randomuser.me/api/portraits/women/34.jpg" loading="lazy" width="120" height="120">
                                 </span>
                                 <div class="w-[calc(100%-3.25rem)]">
-                                    <h3 class="font-medium text-gray-950 dark:text-white">Maya Patel</h3>
+                                    <h3 class="font-medium text-gray-950 dark:text-white">Maya James</h3>
                                     <span class="block text-sm tracking-wide text-gray-600 dark:text-gray-400">Software Engineer</span>
                                     <blockquote class="mt-3">
                                         <p class="text-gray-700 dark:text-gray-300">
@@ -401,7 +401,7 @@
                             <div class="p-[--card-padding] rounded-[--card-border-radius] border bg-white border-[--ui-light-border-color] dark:bg-[--card-dark-bg] dark:border-[--ui-dark-border-color] group">
                                 <div class="flex gap-3">
                                     <span class="relative block rounded-[--avatar-border-radius] text-lg size-10">
-                                        <img class="h-full w-full rounded-[--avatar-border-radius] object-cover" alt="John Doe" src="https://randomuser.me/api/portraits/men/1.jpg" loading="lazy" width="120" height="120">
+                                        <img class="h-full w-full rounded-[--avatar-border-radius] object-cover" alt="smith" src="https://randomuser.me/api/portraits/women/77.jpg" loading="lazy" width="120" height="120">
                                     </span>
                                     <div class="w-[calc(100%-3.25rem)]">
                                         <h3 class="font-medium text-gray-950 dark:text-white">Olivia Smith</h3>
@@ -420,7 +420,7 @@
                             <div class="p-[--card-padding] rounded-[--card-border-radius] border bg-white border-[--ui-light-border-color] dark:bg-[--card-dark-bg] dark:border-[--ui-dark-border-color] group">
                                 <div class="flex gap-3">
                                     <span class="relative block rounded-[--avatar-border-radius] text-lg size-10">
-                                        <img class="h-full w-full rounded-[--avatar-border-radius] object-cover" alt="John Doe" src="https://randomuser.me/api/portraits/men/1.jpg" loading="lazy" width="120" height="120">
+                                        <img class="h-full w-full rounded-[--avatar-border-radius] object-cover" alt="garcia" src="https://randomuser.me/api/portraits/men/47.jpg" loading="lazy" width="120" height="120">
                                     </span>
                                     <div class="w-[calc(100%-3.25rem)]">
                                         <h3 class="font-medium text-gray-950 dark:text-white">Miguel García</h3>
@@ -439,7 +439,7 @@
                             <div class="p-[--card-padding] rounded-[--card-border-radius] border bg-white border-[--ui-light-border-color] dark:bg-[--card-dark-bg] dark:border-[--ui-dark-border-color] group">
                                 <div class="flex gap-3">
                                     <span class="relative block rounded-[--avatar-border-radius] text-lg size-10">
-                                        <img class="h-full w-full rounded-[--avatar-border-radius] object-cover" alt="John Doe" src="https://randomuser.me/api/portraits/men/1.jpg" loading="lazy" width="120" height="120">
+                                        <img class="h-full w-full rounded-[--avatar-border-radius] object-cover" alt="anderson" src="https://randomuser.me/api/portraits/women/65.jpg" loading="lazy" width="120" height="120">
                                     </span>
                                     <div class="w-[calc(100%-3.25rem)]">
                                         <h3 class="font-medium text-gray-950 dark:text-white">Sofia Andersson</h3>
@@ -458,7 +458,7 @@
                         <div class="p-[--card-padding] rounded-[--card-border-radius] border bg-white border-[--ui-light-border-color] dark:bg-[--card-dark-bg] dark:border-[--ui-dark-border-color] group">
                             <div class="flex gap-3">
                                 <span class="relative block rounded-[--avatar-border-radius] text-lg size-10">
-                                    <img class="h-full w-full rounded-[--avatar-border-radius] object-cover" alt="John Doe" src="https://randomuser.me/api/portraits/men/1.jpg" loading="lazy" width="120" height="120">
+                                    <img class="h-full w-full rounded-[--avatar-border-radius] object-cover" alt="fernandez" src="https://randomuser.me/api/portraits/men/89.jpg" loading="lazy" width="120" height="120">
                                 </span>
                                 <div class="w-[calc(100%-3.25rem)]">
                                     <h3 class="font-medium text-gray-950 dark:text-white">Diego Fernandez</h3>
