add tess and shiranr

--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -503,6 +503,9 @@
                         <a href="https://github.com/squidfunk" target="_blank" title="squidfunk" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
                             <img alt="squidfunk" src="https://avatars.githubusercontent.com/u/932156?v=4" class="rounded-full" loading="lazy" width="120" height="120">
                         </a>
+                        <a href="https://github.com/TessFerrandez" target="_blank" title="TessFerrandez" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="TessFerrandez" src="https://avatars.githubusercontent.com/u/5821977?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
                         <a href="https://github.com/asottile" target="_blank" title="asottile" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
                             <img alt="asottile" src="https://avatars.githubusercontent.com/u/1810591?v=4" class="rounded-full" loading="lazy" width="120" height="120">
                         </a>
@@ -514,6 +517,9 @@
                         </a>
                         <a href="https://github.com/oprypin" target="_blank" title="oprypin" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
                             <img alt="oprypin" src="https://avatars.githubusercontent.com/u/371383?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
+                        <a href="https://github.com/shiranr" target="_blank" title="shiranr" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="shiranr" src="https://avatars.githubusercontent.com/u/1862328?v=4" class="rounded-full" loading="lazy" width="120" height="120">
                         </a>
                         <a href="https://github.com/adamwathan" target="_blank" title="adamwathan" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
                             <img alt="adamwathan" src="https://avatars.githubusercontent.com/u/4323180?v=4" class="rounded-full" loading="lazy" width="120" height="120">
