--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -539,6 +539,9 @@
                         <a href="https://github.com/tarekziade" target="_blank" title="tarekziade" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
                             <img alt="tarekziade" src="https://avatars.githubusercontent.com/u/250019?v=4" class="rounded-full" loading="lazy" width="120" height="120">
                         </a>
+                        <a href="https://github.com/madwort" target="_blank" title="madwort" class="size-16 rounded-full border border-gray-950/5 dark:border-white/5">
+                            <img alt="madwort" src="https://avatars.githubusercontent.com/u/2082895?v=4" class="rounded-full" loading="lazy" width="120" height="120">
+                        </a>
                     </div>
                 </div>
             </div>
